--- a/ssf.css
+++ b/ssf.css
@@ -188,3 +188,34 @@ margin-left: 1000px;
     margin-left:180px;
     width:200px;
 }
+#about{
+    background-color: rgb(252, 245, 235);
+    height:400px;
+    width: 100vw;
+}
+#au{
+    padding:50px;
+    text-align: center;
+    font-size: x-large;
+    font-size:40px;
+}
+#l1{
+    padding-top:20px;
+    text-align: center;
+    font-size: 25px;
+}
+#l2{ 
+    text-align: center;
+    font-size: 25px;
+}
+#rm{
+margin-top:50px;
+margin-left:880px;
+height:50px;
+width:150px;
+}
+#wb{
+    font-size: 25px;
+    text-align: center;
+    margin: 50px;
+}
